# langfuse-poc

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  evaluation.md  justfile  langgraph.json  otel_pros_cons.md  pyproject.toml  skills-lock.json
.claude/: settings.local.json
.claude/agents/: llmops-specialist.md
.github/workflows/: cd-sync-prompt-from-langfuse.yaml  langfuse-ci-dev.yaml  langfuse-ci-prod.yaml  prompt-promotion-pipeline.yaml
docs/: 01-agent-flow.excalidraw  02-dual-tracing.excalidraw  03-evaluation-pipeline.excalidraw  04-prompt-management.excalidraw  05-api-architecture.excalidraw  06-gcp-infrastructure.excalidraw
evaluation/: config.py  langfuse_clients.py  run_experiment.py  seed_dataset.py
evaluation/comparison/: comparator.py
evaluation/dataset/: schema.py  seeder.py
evaluation/judge/: dimensions.py  evaluator.py  prompt.py
evaluation/runner/: graph_factory.py  task.py
money_coach/: agent.py  dependencies.py  main.py  prompts.py  state.py
money_coach/agent_tools/: __init__.py  financial.py  health_kpis.py
money_coach/agents/clarifier/: __init__.py  agent.py
money_coach/api/: deps.py  schemas.py  server.py
money_coach/chains/: __init__.py  clarifier.py
money_coach/configs/: __init__.py  agents.yaml  model.py  settings.py
money_coach/graph/: __init__.py  graph.py
money_coach/infrastructure/: __init__.py  checkpointer.py  database.py
money_coach/middleware/: __init__.py  session.py  tracing.py
money_coach/state/: __init__.py  state.py
money_coach/utils/: __init__.py  langfuse.py
(+17 files in other folders)
